three parameters of JVM